--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -19,3 +19,4 @@ services:
       - 5432:5432
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/docker_postgres_init.sql
